--- a/Project.uvprojx
+++ b/Project.uvprojx
@@ -337,7 +337,7 @@
               <MiscControls></MiscControls>
               <Define>USE_STDPERIPH_DRIVER</Define>
               <Undefine></Undefine>
-              <IncludePath>.\Start;.\Library;.\User;.\System;.\Hardware</IncludePath>
+              <IncludePath>.\Start;.\Library;.\User;.\System;.\Hardware;.\Hardware\MPU6050</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -652,16 +652,6 @@
           <GroupName>System</GroupName>
           <Files>
             <File>
-              <FileName>Delay.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\System\Delay.c</FilePath>
-            </File>
-            <File>
-              <FileName>Delay.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\System\Delay.h</FilePath>
-            </File>
-            <File>
               <FileName>systick_scheduler.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\System\systick_scheduler.h</FilePath>
@@ -680,6 +670,16 @@
               <FileName>DWT_Delay.c</FileName>
               <FileType>1</FileType>
               <FilePath>.\System\DWT_Delay.c</FilePath>
+            </File>
+            <File>
+              <FileName>sys.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\System\sys.c</FilePath>
+            </File>
+            <File>
+              <FileName>sys.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\System\sys.h</FilePath>
             </File>
           </Files>
         </Group>
@@ -752,31 +752,6 @@
               <FilePath>.\Hardware\Encoder.h</FilePath>
             </File>
             <File>
-              <FileName>MPU6050.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\Hardware\MPU6050.c</FilePath>
-            </File>
-            <File>
-              <FileName>MPU6050.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\Hardware\MPU6050.h</FilePath>
-            </File>
-            <File>
-              <FileName>MPU6050_Reg.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\Hardware\MPU6050_Reg.h</FilePath>
-            </File>
-            <File>
-              <FileName>MyI2C.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\Hardware\MyI2C.c</FilePath>
-            </File>
-            <File>
-              <FileName>MyI2C.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\Hardware\MyI2C.h</FilePath>
-            </File>
-            <File>
               <FileName>I2C2.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\Hardware\I2C2.h</FilePath>
@@ -795,6 +770,61 @@
               <FileName>PID_system.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\Hardware\PID_system.h</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>mpu6050dmp</GroupName>
+          <Files>
+            <File>
+              <FileName>dmpKey.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Hardware\MPU6050\dmpKey.h</FilePath>
+            </File>
+            <File>
+              <FileName>dmpmap.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Hardware\MPU6050\dmpmap.h</FilePath>
+            </File>
+            <File>
+              <FileName>inv_mpu.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Hardware\MPU6050\inv_mpu.c</FilePath>
+            </File>
+            <File>
+              <FileName>inv_mpu.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Hardware\MPU6050\inv_mpu.h</FilePath>
+            </File>
+            <File>
+              <FileName>inv_mpu_dmp_motion_driver.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Hardware\MPU6050\inv_mpu_dmp_motion_driver.c</FilePath>
+            </File>
+            <File>
+              <FileName>inv_mpu_dmp_motion_driver.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Hardware\MPU6050\inv_mpu_dmp_motion_driver.h</FilePath>
+            </File>
+            <File>
+              <FileName>mpu6050.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Hardware\MPU6050\mpu6050.c</FilePath>
+            </File>
+            <File>
+              <FileName>mpu6050.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Hardware\MPU6050\mpu6050.h</FilePath>
+            </File>
+            <File>
+              <FileName>MPU6050_I2C.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Hardware\MPU6050\MPU6050_I2C.c</FilePath>
+            </File>
+            <File>
+              <FileName>MPU6050_I2C.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Hardware\MPU6050\MPU6050_I2C.h</FilePath>
             </File>
           </Files>
         </Group>
